; ModuleID = '/home/carl/AnghaBench/linux/drivers/scsi/qedf/extr_qedf_io.c_qedf_cmd_timer_set.c'
source_filename = "/home/carl/AnghaBench/linux/drivers/scsi/qedf/extr_qedf_io.c_qedf_cmd_timer_set.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.qedf_ctx = type { i32 }
%struct.qedf_ioreq = type { i32 }

; Function Attrs: noinline nounwind optnone uwtable
define dso_local void @qedf_cmd_timer_set(%struct.qedf_ctx* %0, %struct.qedf_ioreq* %1, i32 %2) #0 {
  %4 = alloca %struct.qedf_ctx*, align 8
  %5 = alloca %struct.qedf_ioreq*, align 8
  %6 = alloca i32, align 4
  store %struct.qedf_ctx* %0, %struct.qedf_ctx** %4, align 8
  store %struct.qedf_ioreq* %1, %struct.qedf_ioreq** %5, align 8
  store i32 %2, i32* %6, align 4
  %7 = load %struct.qedf_ctx*, %struct.qedf_ctx** %4, align 8
  %8 = getelementptr inbounds %struct.qedf_ctx, %struct.qedf_ctx* %7, i32 0, i32 0
  %9 = load i32, i32* %8, align 4
  %10 = load %struct.qedf_ioreq*, %struct.qedf_ioreq** %5, align 8
  %11 = getelementptr inbounds %struct.qedf_ioreq, %struct.qedf_ioreq* %10, i32 0, i32 0
  %12 = load i32, i32* %6, align 4
  %13 = call i32 @msecs_to_jiffies(i32 %12)
  %14 = call i32 @queue_delayed_work(i32 %9, i32* %11, i32 %13)
  ret void
}

declare dso_local i32 @queue_delayed_work(i32, i32*, i32) #1

declare dso_local i32 @msecs_to_jiffies(i32) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
